Changed fixed framerate to 60 to hopefully fix any issues with "fuck off loser"

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -219,6 +219,8 @@ NearClipPlane=5.000000
 
 +ActiveGameNameRedirects=(OldGameName="TP_FirstPersonBP",NewGameName="/Script/GatoGot")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_FirstPersonBP",NewGameName="/Script/GatoGot")
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
 [/Script/AIModule.AISystem]
 bForgetStaleActors=True
